# man_and_glass_task

./: README.md  pyproject.toml
man_and_glass/: logic.py  main.py
tests/: test_logic.py
